--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,16 @@
             android:label="@string/title_activity_game" >
         </activity>
         <activity
+            android:name=".MultiplayerGameActivity"
+            android:label="@string/title_activity_game" >
+        </activity>
+        <activity
             android:name=".GameOverActivity"
             android:label="@string/title_activity_game_over" >
+        </activity>
+        <activity
+            android:name=".Multiplayer"
+            android:label="@string/title_activity_multiplayer" >
         </activity>
     </application>
 
