--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,23 +18,23 @@
         </activity>
         <activity
             android:name=".GameActivity"
-            android:label="@string/title_activity_game" >
+            android:label="HangDroid Singleplayer" >
         </activity>
         <activity
             android:name=".MultiplayerGameActivity"
-            android:label="@string/title_activity_game" >
+            android:label="HangDroid Multiplayer" >
         </activity>
         <activity
             android:name=".GameOverActivity"
-            android:label="@string/title_activity_game_over" >
+            android:label="Game Over" >
         </activity>
         <activity
             android:name=".Multiplayer"
-            android:label="@string/title_activity_multiplayer" >
+            android:label="Multiplayer Game" >
         </activity>
         <activity
             android:name=".ScoresActivity"
-            android:label="@string/title_activity_scores" >
+            android:label="Score Board" >
         </activity>
     </application>
 
